# Algorithm-Assignment

./: README.md
Assignment1/code/: CMakeLists.txt  insertion_sort.cpp  insertion_sort.h  main.cpp  merge_sort.cpp  merge_sort.h  quick_sort.cpp  quick_sort.h  sort_base.h  utils.cpp  utils.h
Assignment1/code/analyze/: analyze_results.py  experiment_results.csv
Assignment2/: CMakeLists.txt
Assignment2/code/: main.cpp
Assignment2/code/algorithms/: knapsack_buttomup.cpp  knapsack_greedy.cpp  knapsack_topdown.cpp  knapsack_utils.cpp
Assignment2/experiments/: plot_results.py  result.csv  run_experiments.py  summary.md
Assignment2/experiments/inputs/: test_large.txt  test_medium.txt  test_small.txt
Assignment2/experiments/outputs/: test_large_result.txt  test_medium_result.txt  test_small_result.txt
Assignment2/include/: knapsack_bottomup.hpp  knapsack_greedy.hpp  knapsack_topdown.hpp  knapsack_utils.hpp
